# awe

./: .gitignore  20260708-awe-adaptive-weight-and-exit.md  LICENSE  LOGGING.md  PROJECT.md  README.md  RESULTS.md  ablation.py  ablation_amort.py  ablation_reachp.py  ablation_rule.py  data.py  data_reachp.py  data_rule.py  model.py  model_amort.py  model_ttt.py  proposal.md  pyproject.toml  train_eval.py
docs/: RESULTS.md  REVIEW.md  RUNBOOK.md  intuition.md  mqar_design.md  proposal.md
docs/exp_logs/: LOG.md
docs/paper/: HANDOFF.md  draft.md
docs/paper/latex/: .gitignore  main.tex  (+2 more)
docs/study/: 20260708-awe-adaptive-weight-and-exit.md
results/: bakeoff_reachp2_s0.json  bakeoff_reachp2_s1.json  bakeoff_reachp2_s2.json  bakeoff_reachp2_s3.json  bakeoff_reachp2_s4.json  bakeoff_reachp2_s5.json  bakeoff_reachp2_s6.json  bakeoff_reachp2_s7.json  bakeoff_reachp2_s8.json  bakeoff_reachp2_s9.json  mqar8k_seed0.json  mqar8k_seed1.json  mqar8k_seed2.json  mqar8k_seed3.json  mqar8k_seed4.json  mqar8k_seed5.json  mqar8k_seed6.json  mqar8k_seed7.json  mqar8k_seed8.json  mqar8k_seed9.json  mqar_seed0.json  mqar_seed1.json  mqar_seed2.json  mqar_seed3.json  mqar_seed4.json  mqar_seed5.json  mqar_seed6.json  mqar_seed7.json  mqar_seed8.json  mqar_seed9.json  mqarhop_seed0.json  mqarhop_seed1.json  mqarhop_seed2.json  mqarhop_seed3.json  mqarhop_seed4.json  mqarhop_seed5.json  mqarhop_seed6.json  mqarhop_seed7.json  mqarhop_seed8.json  mqarhop_seed9.json  (+20 more)
scripts/: aggregate.py  fig1_bakeoff_band.py  fig2_decomposition.py  fig3_mqarhop.py  gpu_watch_run.sh  sweep.sh
(+20 files in other folders)
